objects/dbu_homePageBanner__mdt.object
<CustomObject>
    <fields>
        <fullName>dbu_banner_serial_number__c</fullName>
        <label>dbu banner serial number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dbu_description__c</fullName>
        <label>dbu description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dbu_header_message__c</fullName>
        <label>dbu header message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_href_url__c</fullName>
        <label>dbu href url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_src_img__c</fullName>
        <label>dbu src img</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_store__c</fullName>
        <label>dbu store</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>dbu_homePageBanner</label>
    <pluralLabel>dbu_homePageBanners</pluralLabel>
</CustomObject>